// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateUpdateSecret Create File Secret 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="secretManagerIdentifier-0"
        >
          <label
            class="bp3-label"
            for="secretManagerIdentifier"
          >
            Secrets Manager*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="secretManagerIdentifier"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value="Harness Secrets Manager"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  />
                </div>
              </span>
            </span>
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main"
              icon="edit"
              style="vertical-align: middle;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
            data-id="name-1"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Secret Name*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="file"
          >
            Select File
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-file-input bp3-fill"
            >
              <input
                multiple=""
                name="file"
                type="file"
              />
              <span
                bp3-button-text="Browse"
                class="bp3-file-upload-input bp3-file-upload-input-custom-text"
              >
                Choose file...
              </span>
            </label>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            Description
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            Tags
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags}"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateUpdateSecret Create Secret with radio button 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="secretManagerIdentifier-0"
        >
          <label
            class="bp3-label"
            for="secretManagerIdentifier"
          >
            Secrets Manager*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="secretManagerIdentifier"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value="Harness Secrets Manager"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="type-1"
        >
          <label
            class="bp3-label"
            for="type"
          >
            Secret type
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  checked=""
                  name="type"
                  type="radio"
                  value="SecretText"
                />
                <span
                  class="bp3-control-indicator"
                />
                Text
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="type"
                  type="radio"
                  value="SecretFile"
                />
                <span
                  class="bp3-control-indicator"
                />
                File
              </label>
            </div>
          </div>
        </div>
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  />
                </div>
              </span>
            </span>
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main"
              icon="edit"
              style="vertical-align: middle;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
            data-id="name-2"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Secret Name*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="value"
          >
            Secret Value*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="value"
                placeholder="Add your secret value"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            Description
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            Tags
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags}"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateUpdateSecret Create Secret with radio button and switch radio from text to file 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="secretManagerIdentifier-0"
        >
          <label
            class="bp3-label"
            for="secretManagerIdentifier"
          >
            Secrets Manager*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="secretManagerIdentifier"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value="Harness Secrets Manager"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="type-1"
        >
          <label
            class="bp3-label"
            for="type"
          >
            Secret type
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  checked=""
                  name="type"
                  type="radio"
                  value="SecretText"
                />
                <span
                  class="bp3-control-indicator"
                />
                Text
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="type"
                  type="radio"
                  value="SecretFile"
                />
                <span
                  class="bp3-control-indicator"
                />
                File
              </label>
            </div>
          </div>
        </div>
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  />
                </div>
              </span>
            </span>
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main"
              icon="edit"
              style="vertical-align: middle;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
            data-id="name-2"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Secret Name*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="file"
          >
            Select File
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <label
              class="bp3-file-input bp3-fill"
            >
              <input
                multiple=""
                name="file"
                type="file"
              />
              <span
                bp3-button-text="Browse"
                class="bp3-file-upload-input bp3-file-upload-input-custom-text"
              >
                Choose file...
              </span>
            </label>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            Description
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            Tags
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags}"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateUpdateSecret Create Secret with radio button and switch radio from text to file and back 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="secretManagerIdentifier-0"
        >
          <label
            class="bp3-label"
            for="secretManagerIdentifier"
          >
            Secrets Manager*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="secretManagerIdentifier"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value="Harness Secrets Manager"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
          data-id="type-1"
        >
          <label
            class="bp3-label"
            for="type"
          >
            Secret type
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  checked=""
                  name="type"
                  type="radio"
                  value="SecretText"
                />
                <span
                  class="bp3-control-indicator"
                />
                Text
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="type"
                  type="radio"
                  value="SecretFile"
                />
                <span
                  class="bp3-control-indicator"
                />
                File
              </label>
            </div>
          </div>
        </div>
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  />
                </div>
              </span>
            </span>
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main"
              icon="edit"
              style="vertical-align: middle;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
            data-id="name-2"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Secret Name*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="value"
          >
            Secret Value*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="value"
                placeholder="Add your secret value"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            Description
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            Tags
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags}"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateUpdateSecret Create Text Secret 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group"
          data-id="secretManagerIdentifier-0"
        >
          <label
            class="bp3-label"
            for="secretManagerIdentifier"
          >
            Secrets Manager*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="secretManagerIdentifier"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value="Harness Secrets Manager"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                  tabindex="0"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  />
                </div>
              </span>
            </span>
            <span
              class="bp3-icon bp3-icon-edit StyledProps--main"
              icon="edit"
              style="vertical-align: middle;"
            >
              <svg
                data-icon="edit"
                height="12"
                viewBox="0 0 16 16"
                width="12"
              >
                <desc>
                  edit
                </desc>
                <path
                  d="M3.25 10.26l2.47 2.47 6.69-6.69-2.46-2.48-6.7 6.7zM.99 14.99l3.86-1.39-2.46-2.44-1.4 3.83zm12.25-14c-.48 0-.92.2-1.24.51l-1.44 1.44 2.47 2.47 1.44-1.44c.32-.32.51-.75.51-1.24.01-.95-.77-1.74-1.74-1.74z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp3-form-group"
            data-id="name-1"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Secret Name*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="value"
          >
            Secret Value*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="value"
                placeholder="Add your secret value"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            Description
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            Tags
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags}"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CreateUpdateSecret Update Text Secret 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="bp3-form-group bp3-disabled"
          data-id="secretManagerIdentifier-0"
        >
          <label
            class="bp3-label"
            for="secretManagerIdentifier"
          >
            Secrets Manager*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group bp3-disabled"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    disabled=""
                    name="secretManagerIdentifier"
                    placeholder="Search..."
                    style="padding-right: 0px;"
                    type="text"
                    value="vault1"
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-caret-down StyledProps--main StyledProps--padding-small"
                      icon="caret-down"
                    >
                      <svg
                        data-icon="caret-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          caret-down
                        </desc>
                        <path
                          d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="InputWithIdentifier--txtNameContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
          >
            <p
              class="StyledProps--font StyledProps--main"
            >
              ID
              :
            </p>
            <span
              class="bp3-popover-wrapper"
            >
              <span
                class="bp3-popover-target"
              >
                <div
                  class="bp3-editable-text bp3-disabled InputWithIdentifier--idValue"
                >
                  <span
                    class="bp3-editable-text-content"
                    style="height: 1px; line-height: 1px; min-width: 0;"
                  >
                    text1
                  </span>
                </div>
              </span>
            </span>
          </div>
          <div
            class="bp3-form-group"
            data-id="name-1"
          >
            <label
              class="bp3-label"
              for="name"
            >
              Secret Name*
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="name"
                  type="text"
                  value="text1"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <div
            class="bp3-form-content"
          >
            <div>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  checked=""
                  name="valueType"
                  type="radio"
                  value="Inline"
                />
                <span
                  class="bp3-control-indicator"
                />
                Inline Secret Value
              </label>
              <label
                class="bp3-control bp3-radio bp3-inline Radio--radio"
              >
                <input
                  name="valueType"
                  type="radio"
                  value="Reference"
                />
                <span
                  class="bp3-control-indicator"
                />
                Reference Secret
              </label>
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="value"
          >
            Secret Value*
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input-group"
            >
              <input
                autocomplete="off"
                class="bp3-input"
                name="value"
                placeholder="Encrypted"
                type="password"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="description"
          >
            Description
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <textarea
              autocomplete="off"
              class="bp3-input bp3-fill"
              name="description"
            />
          </div>
        </div>
        <div
          class="bp3-form-group"
        >
          <label
            class="bp3-label"
            for="tags"
          >
            Tags
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-input bp3-tag-input"
            >
              <div
                class="bp3-tag-input-values"
              >
                <input
                  class="bp3-input-ghost"
                  data-mentions="kv-tag-input-tags}"
                  placeholder="Type and press enter to create a tag"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <button
          class="bp3-button StyledProps--font Button--button Button--with-current-color StyledProps--main StyledProps--intent-primary StyledProps--margin-top-large"
          type="submit"
        >
          <span
            class="bp3-button-text"
          >
            Save
          </span>
        </button>
      </div>
    </form>
  </div>
</div>
`;
